fixed tweet icon spacing

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -48,7 +48,7 @@
 @media only screen and (min-width: 1025px){
 
   header {
-    width: 480px;
+    width: 550px;
     margin-left:70px;
     margin-right:70px;
     flex-direction: column;
@@ -62,8 +62,8 @@
   .orientation {
   display: flex;
   width: 100%;
-  padding-top: 50px;
   justify-content: center;
+  padding: 50px 40px 0px;
   }
 } 
 
